--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Fehlipe19/cse-341-project1/issues"
   },
-  "homepage": "https://github.com/Fehlipe19/cse-341-project1#readme"
+  "homepage": "https://github.com/Fehlipe19/cse-341-project1#readme",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
